--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Controle</title>
-    <link rel="stylesheet" href="/bootstrap-4.5.2-dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/strap-4.5.2-dist/css/bootstrap.min.csss />p>
     
+                                 xela rjounob >
 </head>
 
 <body>
